Allow scrolling by keyboard in Chrome/Opera
Set "tabindex" attribute to allow focus;
Added "outline: none" to prevent focus ring from appearing.

Fixes #3443

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -236,6 +236,7 @@ html[dir='rtl'] #sidebarContent {
   right: 0;
   bottom: 0;
   left: 0;
+  outline: none;
 }
 .loadingInProgress #viewerContainer {
   top: 39px;
