Prevent the loadingBar from overlaying the errorWrapper

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1225,6 +1225,9 @@ canvas {
   padding: 3px;
   font-size: 0.8em;
 }
+.loadingInProgress #errorWrapper {
+  top: 39px;
+}
 
 #errorMessageLeft {
   float: left;
