--- a/web/viewer.css
+++ b/web/viewer.css
@@ -99,7 +99,20 @@ select {
   display: none;
 }
 
-#viewerContainer.presentationControls {
+:-webkit-full-screen .textLayer > div {
+  cursor: none;
+}
+
+:-moz-full-screen .textLayer > div {
+  cursor: none;
+}
+
+:fullscreen .textLayer > div {
+  cursor: none;
+}
+
+#viewerContainer.presentationControls,
+#viewerContainer.presentationControls .textLayer > div {
   cursor: default;
 }
 
