Squashed: Added basic support for presentationMode in IE11

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -64,6 +64,21 @@ select {
   cursor: none;
 }
 
+#viewerContainer:-ms-fullscreen {
+  top: 0px !important;
+  position: absolute;
+  border-top: 2px solid transparent;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  cursor: none;
+}
+
+#viewerContainer:-ms-fullscreen::-ms-backdrop {
+  background-color: #404040;
+  background-image: url(images/texture.png);
+}
+
 #viewerContainer:fullscreen {
   top: 0px;
   border-top: 2px solid transparent;
@@ -83,6 +98,10 @@ select {
   margin-bottom: 100%;
 }
 
+:-ms-fullscreen .page {
+  margin-bottom: 100%;
+}
+
 :fullscreen .page {
   margin-bottom: 100%;
 }
@@ -92,6 +111,10 @@ select {
 }
 
 :-moz-full-screen a:not(.internalLink) {
+  display: none;
+}
+
+:-ms-fullscreen a:not(.internalLink) {
   display: none;
 }
 
