dont display file input when printing
closes #2464

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1434,6 +1434,10 @@ canvas {
     display: block;
   }
 
+  .fileInput {
+    display: none;
+  }
+
   /* Rules for browsers that support mozPrintCallback */
   body[data-mozPrintCallback] #outerContainer {
     display: none;
