Prevent the page number field from having a spinner (spin buttons) in mozilla now that it supports <input type=number>

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1038,6 +1038,7 @@ html[dir='rtl'] .verticalToolbarSeparator {
 }
 
 .toolbarField.pageNumber {
+  -moz-appearance: textfield; /* hides the spinner in moz */
   min-width: 16px;
   text-align: right;
   width: 40px;
