--- a/web/viewer.css
+++ b/web/viewer.css
@@ -20,7 +20,7 @@
 
 html {
   height: 100%;
-  /* Font size is needed to make the activity bar the corect size. */
+  /* Font size is needed to make the activity bar the correct size. */
   font-size: 10px;
 }
 
