De-inline CSS for the 'open file' button

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1434,6 +1434,10 @@ canvas {
   background: white;
   color: black;
   margin-top: 5px;
+  visibility: hidden;
+  position: fixed;
+  right: 0;
+  top: 0;
 }
 
 #PDFBug {
