Get rid of weird scrollbar on mouse down

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1598,8 +1598,8 @@ html[dir='rtl'] #documentPropertiesContainer .row > * {
   display: block;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   overflow: hidden;
   z-index: 50000; /* should be higher than anything else in PDF.js! */
 }
