Removes -moz-box-sizing usage

--- a/extensions/b2g/viewer.css
+++ b/extensions/b2g/viewer.css
@@ -13,9 +13,8 @@
  * limitations under the License.
  */
 
-* { -moz-box-sizing: border-box; }
-
 * {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
