[B2G] Remove the spinner from the pageNumber field

--- a/extensions/b2g/viewer.css
+++ b/extensions/b2g/viewer.css
@@ -91,6 +91,7 @@ footer {
 }
 
 #pageNumber {
+  -moz-appearance: textfield; /* hides the spinner in moz */
   position: absolute;
   width: 28%;
   height: 100%;
