fix buttons under android

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -545,7 +545,7 @@ html[dir='rtl'] .splitToolbarButton > .toolbarButton {
 .toolbarButton,
 .secondaryToolbarButton {
   border: 0 none;
-  background-color: rgba(0, 0, 0, 0);
+  background: none;
   width: 32px;
   height: 25px;
 }
